--- a/demo.html
+++ b/demo.html
@@ -18,10 +18,10 @@
     </div>
 
     <div class="main-button" class="main-button">
-        <button> Claim Your Free Demo Call</button>
+        <button> <a href='#calendar'>Claim Your Free Demo Call</a></button>
     </div>
 
-    <div class="calendar" style="overflow-y: hidden;">
+    <div id="calendar" class="calendar" style="overflow-y: hidden;">
         <!-- Calendly inline widget begin -->
         <div class="calendly-inline-widget" data-url="https://calendly.com/iecomedia/discovery-call?hide_gdpr_banner=1" style="min-width:320px;height:675px;overflow-y: hidden;"></div>
         <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
