--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     src="./images/logo/IECO_crop.png"
                     width="108" alt="ieco media logo" class="logo-image" /></a>
             <div class="menu">
-                <nav role="navigation" class="navigation-items w-nav-menu"><a href="./demo-call"
+                <nav role="navigation" class="navigation-items w-nav-menu"><a href="./demo"
                         class="button demo w-inline-block">
                         <div>Let's talk</div>
                     </a></nav>
@@ -96,7 +96,7 @@
                     <div class="paragraph-bigger cc-bigger-white-light">Helping fitness nutrition brands scale to
                         7&amp;8-figures in revenue and add positive emotions to the lives of their customers using the
                         power of <b>TikTok Ads</b><br /></div>
-                </div><a href="./demo-call" class="button demo w-inline-block">
+                </div><a href="./demo" class="button demo w-inline-block">
                     <div class="text-block">Click here if you want to scale your revenue 5x</div>
                 </a>
             </div>
@@ -177,7 +177,7 @@
                     </div>
                     <div class="team-slider-nav-2 w-slider-nav w-slider-nav-invert w-round"></div>
                 </div>
-            </div><a href="./demo-call" class="button demo w-button">Book in Your Free Demo</a>
+            </div><a href="./demo" class="button demo w-button">Book in Your Free Demo</a>
         </section>
         <section class="hero-heading-right wf-section">
             <div class="container-2">
@@ -192,7 +192,7 @@
                         <h1 class="heading-4">Sport in my life</h1>
                         <div class="text-block-7"><strong>Kiryl Zhukau</strong> - CEO &amp; Founder of IECO Media</div>
                         <p class="margin-bottom-24px">Meet the founder of our company, who has always had a passion for sports and an active lifestyle. From a young age, I have involved in various sports and have always believed in the importance of leading an active lifestyle. This passion and belief is what drove me to start this business and pursue this niche. I firmly believe that life is a movement, and if you stop, you're not in the game. That's why I am committed to providing the best products and services in the industry to help others lead active and healthy lives."</p>
-                        <a href="./demo-call" class="button demo w-button">Book in Your Free Demo</a>
+                        <a href="./demo" class="button demo w-button">Book in Your Free Demo</a>
                     </div>
                 </div>
             </div>
@@ -260,7 +260,7 @@
                             <p><strong>A $779 Fitness HACKS Cheat-sheet 🚀 FOR YOUR BRAND, FOR FREE!</strong></p>
                         </li>
                     </ul>
-                </div><a href="./demo-call" class="button demo w-button">Book in Your Free Demo</a>
+                </div><a href="./demo" class="button demo w-button">Book in Your Free Demo</a>
             </div>
         </section>
         <section class="footer-subscribe wf-section">
