--- a/demo.html
+++ b/demo.html
@@ -18,7 +18,9 @@
     </div>
 
     <div class="main-button" class="main-button">
-        <button> <a href='#calendar'>Claim Your Free Demo Call</a></button>
+        <a href='#calendar'>
+            <button> Claim Your Free Demo Call</button>
+        </a>
     </div>
 
     <div id="calendar" class="calendar" style="overflow-y: hidden;">
