--- a/demo.html
+++ b/demo.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:200,400,700,800,900%7COpen%20Sans:400,700%7CMontserrat:400,700%7CPoppins:400,700&amp;display=swap" media="all" onload="this.media='all'">
     <link rel="stylesheet" href="./style-new.css">
-    <title>Document</title>
+    <title>The Best Choice! - IECO</title>
 </head>
 <body>
     <h2>
