--- a/index.html
+++ b/index.html
@@ -93,9 +93,7 @@
             <div class="intro-content cc-homepage">
                 <div class="intro-text">
                     <div class="heading-jumbo">Unlock Explosive Growth with the Best ECOM GROWTH Agency for Startups</div>
-                    <div class="paragraph-bigger cc-bigger-white-light">Helping fitness nutrition brands scale to
-                        7&amp;8-figures in revenue and add positive emotions to the lives of their customers using the
-                        power of <b>TikTok Ads</b><br /></div>
+                    <div class="paragraph-bigger cc-bigger-white-light">We help you get 100k/MRR within 90 days completely DFY all systems paid for and managed from our end, and if you don’t hit that goal you don’t pay us anything.</div>
                 </div><a href="./demo" class="button demo w-inline-block">
                     <div class="text-block">Click here if you want to scale your revenue 5x</div>
                 </a>
