--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                 </div>
                 <div class="footer-divider-two"></div>
                 <div class="footer-bottom">
-                    <div class="footer-copyright">© 2022 IECO Media. All rights reserved</div>
+                    <div class="footer-copyright">© 2023 IECO MEDIA INC. All rights reserved</div>
                     <div class="footer-legal-block"><a href="#" class="footer-legal-link">Terms Of Use</a><a href="#"
                             class="footer-legal-link">Privacy Policy</a></div>
                 </div>
