Update index.html - Cards, goal, mission changings

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ src="https://www.facebook.com/tr?id=999577147872481&ev=PageView&noscript=1"
             <div class="intro-content cc-homepage">
                 <div class="intro-text">
                     <div class="heading-jumbo">Unlock Explosive Growth with the Best ECOM GROWTH Agency for Startups</div>
-                    <div class="paragraph-bigger cc-bigger-white-light">We help you get $100k/MRR within 90 days completely DFY all systems paid for and managed from our end, and if you don’t hit that goal you don’t pay us anything.</div>
+                    <div class="paragraph-bigger cc-bigger-white-light">Helping Health & Wellness brands achieve 7-figure revenue using our Proven 4-Step Quantum Leap Formula, or You Don't Pay!</div>
                 </div><a href="./demo" class="button demo w-inline-block">
                     <div class="text-block">Click here if you want to scale your revenue 5x</div>
                 </a>
@@ -101,7 +101,7 @@ src="https://www.facebook.com/tr?id=999577147872481&ev=PageView&noscript=1"
         <div class="motto-wrap">
             <div class="container">
                 <div class="label cc-light">What we believe in</div>
-                <div id="aboutus" class="heading-jumbo-small">1 billion users on TikTok, 1 billion opportunities for your brand.<br /></div>
+                <div id="aboutus" class="heading-jumbo-small">Uniqueness in everything is our main weapon.<br /></div>
             </div>
         </div>
         
@@ -129,9 +129,8 @@ src="https://www.facebook.com/tr?id=999577147872481&ev=PageView&noscript=1"
                                     sizes="(max-width: 479px) 94vw, (max-width: 991px) 43vw, (max-width: 1439px) 28vw, 282px"
                                     alt="360 degrees" class="team-member-image-two" />
                                 <div class="team-block-info">
-                                    <h3 class="team-member-name-two">360 Approach</h3>
-                                    <p class="team-member-text">We have a 360 approach to each client, we will develop
-                                        an individual plan with you to achieve success</p>
+                                    <h3 class="team-member-name-two">We Embrace a 360-Degree Approach</h3>
+                                    <p class="team-member-text">Collaborating with You to Develop an Individualized Plan for Unparalleled Success.</p>
                                 </div>
                             </div>
                         </div>
@@ -143,9 +142,8 @@ src="https://www.facebook.com/tr?id=999577147872481&ev=PageView&noscript=1"
                                     sizes="(max-width: 479px) 94vw, (max-width: 991px) 43vw, (max-width: 1439px) 28vw, 282px"
                                     alt="" class="team-member-image-two" />
                                 <div class="team-block-info">
-                                    <h3 class="team-member-name-two">Profitable ad scaling</h3>
-                                    <p class="team-member-text">Our team consists of professionals who understand
-                                        advertising like Cristiano Ronaldo in football</p>
+                                    <h3 class="team-member-name-two">4-Step Quantum Leap Formula</h3>
+                                    <p class="team-member-text">Unleashing the Power of Unique Strategies and Value-First Approach for Unprecedented Conversion Success.</p>
                                 </div>
                             </div>
                         </div>
@@ -157,8 +155,8 @@ src="https://www.facebook.com/tr?id=999577147872481&ev=PageView&noscript=1"
                                     sizes="(max-width: 479px) 94vw, (max-width: 991px) 43vw, (max-width: 1439px) 28vw, 282px"
                                     alt="" class="team-member-image-two" />
                                 <div class="team-block-info">
-                                    <h3 class="team-member-name-two">Ad Copy creating</h3>
-                                    <p class="team-member-text">We create great ad copy that hook customers</p>
+                                    <h3 class="team-member-name-two">Potential of the Strongest Funnels</h3>
+                                    <p class="team-member-text">Our Highly Experienced Team Delivers Exceptional Results for Numerous Clients.</p>
                                 </div>
                             </div>
                         </div>
