--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html><!-- This site was created in Webflow. https://www.webflow.com -->
-<!-- Last Published: Fri Nov 11 2022 12:16:42 GMT+0000 (Coordinated Universal Time) -->
+<!DOCTYPE html>
 <html data-wf-domain="www.iecomedia.com" data-wf-page="63339f35e84c48a674cb7009"
     data-wf-site="63339f35e84c481d39cb7006">
 
@@ -33,7 +32,7 @@
                 .className += t + "touch")
         }(window, document);
     </script>
-    <link rel="icon" href="./images/IECO_fav.png">
+    <link rel="icon" href="./images/icons/favicon-32x32.png">
     
     <script>
 !function (w, d, t) {
