--- a/demo.html
+++ b/demo.html
@@ -26,9 +26,10 @@
 
     <div id="calendar" class="calendar" style="overflow-y: hidden;">
         <!-- Calendly inline widget begin -->
-        <div class="calendly-inline-widget" data-url="https://calendly.com/iecomedia/discovery-call?hide_gdpr_banner=1" style="min-width:320px;height:675px;overflow-y: hidden;"></div>
+        <div class="calendly-inline-widget" data-url="https://calendly.com/iecomedia/quick" style="min-width:320px;height:675px;overflow-y: hidden;"></div>
         <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
         <!-- Calendly inline widget end -->
+        
     </div>
       
 </body>
